working on md files. fixed a scope bug in summarize feature.